# Transkriberaren

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALLATION.md  LATHUND.md  MötesSkribent-teknisk-specifikation.md  pyproject.toml  sidecar.spec  sidecar_entry.py
.github/workflows/: release.yml  verify.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
app/src/components/: AudioLevelBars.tsx  CustomSelect.tsx  DashboardView.tsx  GlassCard.tsx  HistoryView.tsx  InfoModal.tsx  Logo.tsx  ProcessingView.tsx  RecordingView.tsx  ResultView.tsx  SettingsView.tsx  Toast.tsx  TranscribeView.tsx  UpdateChecker.tsx
app/src/data/: promptTemplates.ts
app/src/hooks/: useAudioDevices.ts  useAudioLevel.ts  useAudioMode.ts  useHistory.ts  useOllama.ts  usePipeline.ts  usePromptTemplates.ts  useRecorder.ts
app/src/lib/: generateDocx.ts
app/src/styles/: globals.css
docs/superpowers/specs/: 2026-04-15-simplified-audio-modes-design.md  2026-04-18-headphones-loopback-fix-design.md
scripts/: build_installer.ps1  build_sidecar.ps1  build_zip.ps1  bump-version.sh  download_models.py  installer.iss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  commands.rs  lib.rs  main.rs  meeting_detector.rs  ollama.rs  sidecar.rs  sidecar_manager.rs  wasapi_loopback.rs
src/motesskribent/: __init__.py  __main__.py  cli.py  pipeline.py  server.py
src/motesskribent/audio/: preprocessor.py  recorder.py
src/motesskribent/diarization/: channel_diarizer.py  diarizer.py
src/motesskribent/output/: formatter.py
src/motesskribent/transcription/: transcriber.py
tests/: run_diarizer_test.py  run_transcriber_test.py  test_channel_diarizer.py  test_cli.py  test_diarizer.py  test_formatter.py  test_pipeline.py  test_preprocessor.py  test_server_ipc.py  test_transcriber.py
