[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motesskribent"
version = "0.3.0"
description = "Lokal mötesanteckning med AI — transkribering och talarseparering"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "diarize>=0.1.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
motesskribent = "motesskribent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
