[package]
name = "motesskribent-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "motesskribent_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "motesskribent-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time"] }
opener = "0.7"
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
