[package]
name = "motesskribent-app"
version = "0.5.5"
edition = "2021"

[lib]
name = "motesskribent_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "motesskribent-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "macros"] }
opener = "0.7"
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
dirs = "5"
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
ringbuf = "0.4"
base64 = "0.22"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Devices_Properties",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Media_Multimedia",
] }
